--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,10 @@ jobs:
     steps:
       - *restore_repo
       - checkout
+      - persist_to_workspace:
+        root: .
+        paths:
+          - '*'
       - save_cache:
           key: v1-repo-{{ .Branch }}-{{ .Revision }}
           paths:
@@ -66,7 +70,7 @@ jobs:
   install_dependencies:
     <<: *container_config
     steps:
-      - *restore_repo
+      - *attach_workspace
       - *sum_lockfiles
       - *restore_npm_cache
       - *npm_install
