--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "postcss-safe-parser": "^4.0.2",
     "prettier": "^2.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -104,7 +105,6 @@
     "ie >= 11"
   ],
   "dependencies": {
-    "@std-proposal/temporal": "0.0.1",
-    "postcss-safe-parser": "^6.0.0"
+    "@std-proposal/temporal": "0.0.1"
   }
 }
