--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ references:
   attach_workspace: &attach_workspace
     attach_workspace:
         at: .
-  
+
   persist_to_workspace: &persist_to_workspace
     persist_to_workspace:
       root: .
@@ -137,6 +137,7 @@ jobs:
           path: coverage
 
   build_docs:
+    resource_class: medium+
     <<: *container_config
     steps:
       - *attach_workspace
