--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,23 +141,15 @@ jobs:
     <<: *container_config
     steps:
       - *attach_workspace
+      - *generate_base_path
       - run:
           command: node -v && node -e 'console.log(`heap_size_limit = ${v8.getHeapStatistics().heap_size_limit / (1024 * 1024)} MB`)' && npm run build -- --base "/${BASE_PATH}/"
-      - store_artifacts:
-          path: ~/atlantis/.docz/dist
-          destination: docs
-      - attach_workspace:
-          at: /tmp/workspace
-      - run: cp -r ~/atlantis/.docz/dist /tmp/workspace/
-      - persist_to_workspace:
-          root: /tmp/workspace
-          paths:
-            - dist
 
   release:
     <<: *container_config
     steps:
       - *attach_workspace
+      - *github_authenticity
       - add_ssh_keys:
           fingerprints:
             - "39:99:9f:56:1c:70:0e:53:6a:ed:64:14:c3:a8:e2:ce"
