Add back artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,6 +144,10 @@ jobs:
       - *generate_base_path
       - run:
           command: node -v && node -e 'console.log(`heap_size_limit = ${v8.getHeapStatistics().heap_size_limit / (1024 * 1024)} MB`)' && npm run build -- --base "/${BASE_PATH}/"
+      - store_artifacts:
+          path: ~/atlantis/.docz/dist
+          destination: docs
+
 
   release:
     <<: *container_config
