--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,9 +195,11 @@ workflows:
       - release:
           filters:
             branches:
-              only: "master"
+              # only: "master"
+              only: "test-ssh-key"
           requires:
-            - lint_javascript
-            - lint_css
-            - test
-            - build_docs
+            - install_dependencies
+            # - lint_javascript
+            # - lint_css
+            # - test
+            # - build_docs
