--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,24 +171,24 @@ workflows:
   atlantis:
     jobs:
       - checkout_code
-      - install_dependencies:
-          requires:
-            - checkout_code
-      - check_for_manual_release:
-          requires:
-            - install_dependencies
-      - lint_javascript:
-          requires:
-            - check_for_manual_release
-      - lint_css:
-          requires:
-            - check_for_manual_release
-      - test:
-          requires:
-            - check_for_manual_release
-      - build_docs:
-          requires:
-            - check_for_manual_release
+      # - install_dependencies:
+      #     requires:
+      #       - checkout_code
+      # - check_for_manual_release:
+      #     requires:
+      #       - install_dependencies
+      # - lint_javascript:
+      #     requires:
+      #       - check_for_manual_release
+      # - lint_css:
+      #     requires:
+      #       - check_for_manual_release
+      # - test:
+      #     requires:
+      #       - check_for_manual_release
+      # - build_docs:
+      #     requires:
+      #       - check_for_manual_release
       - release:
           filters:
             branches:
