--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.3.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.0.2",
     "@types/classnames": "^2.2.7",
     "@types/glob": "^7.1.1",
