--- a/.eslintignore
+++ b/.eslintignore
@@ -2,6 +2,7 @@ node_modules
 dist
 .rpt2_cache
 packages/design/colors.js
+packages/design/iconStyle.*
 packages/design/icons
 packages/generators/templates
 
