--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -44,11 +44,12 @@
     "postcss-preset-env": "^6.6.0",
     "rollup": "^1.11.3",
     "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-multi-input": "^0.2.2",
     "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.21.0",
+    "rollup-plugin-typescript2": "^0.31.2",
     "typed-css-modules": "^0.7.0",
     "typescript": "^3.8.3"
   }
