--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
     "install": "npm run lerna:bootstrap",
     "release-the-kraken": "npm ci && lerna publish",
+    "release:unpublished-package": "npm ci && lerna publish from-package",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes",
     "version": "node ensureChangelogHeaders.js",
